--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="profile">我的</string>
     <string name="user">用户</string>
     <string name="user_settings">用户设置</string>
+    <string name="time_table_add">添加时间表</string>
     <string name="time_table">时间表</string>
     <string name="time_table_preview">时间表预览</string>
 </resources>
