添加重命名时间表的功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="user">用户</string>
     <string name="user_settings">用户设置</string>
     <string name="time_table_add">添加时间表</string>
+    <string name="time_table_rename">重命名时间表</string>
     <string name="time_table_delete">删除时间表</string>
     <string name="time_table_group_add">添加组</string>
     <string name="time_table">时间表</string>
