--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="time_table_rename">重命名时间表</string>
     <string name="time_table_delete">删除时间表</string>
     <string name="time_table_group_add">添加组</string>
+    <string name="time_table_group_delete">删除组</string>
     <string name="time_table">时间表</string>
     <string name="time_table_preview">时间表预览</string>
 </resources>
