--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="important">重要</string>
     <string name="add_list">添加列表</string>
     <string name="global_settings">全局设置</string>
+    <string name="time_duration">时间段</string>
 </resources>
