--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,14 @@
     <string name="dailyset_user">用户日程</string>
     <string name="class_table">课表</string>
     <string name="important">重要</string>
-    <string name="add_list">添加列表</string>
+    <string name="dailyset_list_add">添加列表</string>
     <string name="global_settings">全局设置</string>
     <string name="time_duration">时间段</string>
-    <string name="create_dailyset">创建列表</string>
+    <string name="dailyset_list_name">列表名称</string>
+    <string name="dailyset_type_normal">普通</string>
+    <string name="dailyset_type_clazz">课表</string>
+    <string name="dailyset_type_task">项目</string>
+    <string name="dailyset_type_normal_description">普通的列表,一般用于记录TODO,事项,日程等.</string>
+    <string name="dailyset_type_clazz_description">课表专用类型,用于记录课表相关的日程.</string>
+    <string name="dailyset_type_task_description">项目专用日程,用于管理项目中各TODO的依赖关系,委派等.(开发中,暂不可用)</string>
 </resources>
