--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="dailyset_type_clazz_description">课表专用类型,用于记录课表相关的日程.</string>
     <string name="dailyset_type_task_description">项目专用日程,用于管理项目中各TODO的依赖关系,委派等.(开发中,暂不可用)</string>
     <string name="dailyset_delete_emoji">删除表情符号</string>
+    <string name="dailyset_add_term">添加学期</string>
 </resources>
