--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="daily_set">集合</string>
     <string name="profile">我的</string>
     <string name="user">用户</string>
+    <string name="login">登录</string>
     <string name="user_settings">用户设置</string>
     <string name="time_table_add">添加时间表</string>
     <string name="time_table_rename">重命名时间表</string>
@@ -36,4 +37,14 @@
     <string name="current_user_uid_description">当前用户uid</string>
     <string name="now_description">当前时间</string>
     <string name="now_day_of_week_description">当前星期</string>
+
+    <!--region 登录界面-->
+    <string name="login_user_field">用户名</string>
+    <string name="login_user_field_tip">请输入用户名</string>
+    <string name="login_user_password">密码</string>
+    <string name="login_user_password_tip">请输入密码</string>
+    <string name="login_register_action_tip">立即注册</string>
+    <string name="login_forget_password_action_tip">忘记密码？</string>
+
+    <!--endregion -->
 </resources>
