--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,9 @@
     <string name="dailyset_add_term">添加学期</string>
     <string name="dailyset_clazz_week_1">第%s周</string>
 
+    <string name="dailyset_clazz_auto_rename">重命名自动课表</string>
+    <string name="dailyset_list_name_clazz_auto">自动课表名称</string>
+
     <string name="seed_version_description">数据库种子版本号</string>
     <string name="current_user_uid_description">当前用户uid</string>
     <string name="now_description">当前时间</string>
