--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="re_login">重新登录</string>
     <string name="logout">退出登录</string>
     <string name="register">注册</string>
+    <string name="cancel">取消</string>
     <string name="user_settings">用户设置</string>
 
     <string name="time_table_add">添加时间表</string>
